2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (bg_position_parse),
	(bg_repeat_parse):
	* ccss-cairo/ccss-border-parser.c (border_color_factory),
	(border_style_factory), (border_width_factory),
	(border_factory_impl), (border_radius_new),
	(border_radius_factory), (border_style_new), (border_width_new):
	* ccss-cairo/ccss-border.c (get_line_draw_func):
	* ccss-cairo/ccss-cairo-style.c:
	* ccss-cairo/ccss-color.c (ccss_color_parse):
	* ccss-cairo/ccss-image.c (ccss_image_parse):
	* ccss-doc/tmpl/property.sgml:
	* ccss/ccss-property.c (ccss_property_init),
	(ccss_property_parse_state):
	* ccss/ccss-property.h:
	Naming consistency: s,CCSS_PROPERTY_STATE_UNSET,CCSS_PROPERTY_STATE_INVALID.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss-doc/tmpl/function.sgml:
	* ccss/ccss-function.c (ccss_function_invoke):
	* ccss/ccss-function.h:
	* examples/example-3.c (url):
	Provide user-data to function handlers.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss/Makefile.am:
	* ccss/ccss-node-priv.h:
	* ccss/ccss-node.c:
	* ccss/ccss-node.h:
	* ccss/ccss-selector.c:
	Split out private node interface.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-border-image-parser.c (border_image_convert):
	* ccss-cairo/ccss-cairo-style.c (gather_outline),
	(gather_background), (ccss_cairo_style_draw_outline),
	(ccss_cairo_style_draw_rectangle),
	(ccss_cairo_style_draw_rectangle_with_gap):
	Fix warnings.

	* ccss/ccss-property-generic.c (property_free): free string payload.

	* ccss/ccss.sym: export dump functions.

	* examples/example-1.c (main):
	* examples/example-2.c (main):
	* examples/example-3.c (main):
	* examples/example-4.c (main):
	Correctly shutdown ccss-cairo.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-function.h:
	* ccss/ccss-property-generic.c:
	* ccss/ccss-property.c:
	* ccss/ccss-property.h:
	* ccss/ccss-selector.c (ccss_selector_copy):
	* ccss/ccss.c:
	Fix warnings.
